--- a/web/src/components/pages/dashboard/ui.css
+++ b/web/src/components/pages/dashboard/ui.css
@@ -14,6 +14,7 @@
     & .denominator {
         display: flex;
         flex-direction: row;
+        flex-shrink: 0;
         white-space: pre-wrap;
     }
 }
